[tool.poetry]
name = "mvq_graph_model"
version = "0.1.0"
description = "Mitral Valve detection with graph models (Pytorch Lightning)"
authors = ["BSA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lightning = {extras = ["extra"], version = "^2.2.0.post0"}
torch = "^2.2"
torch-geometric = "^2.5.0"
kornia = "^0.7"
loguru = "^0.7.2"
pydantic = "^2.5.2"
torchvision = "^0.17"
unet = "^0.7.7"
einops = "^0.7.0"
click = "^8.0.0"
python-box = "^7.1.1"
hydra-core = "^1.3.2"
ruamel-yaml = "^0.18.6"
diskcache = "^5.6.3"
lz4 = "^4.3.3"
joblib = "^1.3.2"
scikit-image = "^0.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
isort = "^5.13"
black = "^24"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
jupyterlab = "^4.0.9"
ipython = "^8.18.1"
vulture = "^2.10"
pyvista = "^0.43.3"
opencv-python = "^4.9.0.80"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["torch_geometric"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
